--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Electron App</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Hello from Electron!</h1>
-    <p>Welcome to your first Electron app.</p>
+    <div class="container">
+      <h1>Hello from Electron!</h1>
+      <p>Welcome to your first Electron app with external CSS styling.</p>
+    </div>
   </body>
 </html>
